fix nav style / start work on dark mode, Redux ?

--- a/src/app/components/navBar/navBar.scss
+++ b/src/app/components/navBar/navBar.scss
@@ -7,6 +7,11 @@
     }
 }
 
+.other-nav {
+   height: 40px;
+   margin-bottom: 50px;
+}
+
 .dark-mode #navBar {
     color: white !important;
 }
